# pito

./: .gitignore  .gitmodules  LICENSE  Makefile  README  TODO
doc/: Makefile  pito.txt
doc/website/: Makefile  index.html.meow
doc/website/css/: global.css
share/: dev-env.sh  pito.txt  wrap_symbols.txt
src/: CMakeLists.txt  config.hpp.cmake
src/interceptor/: CMakeLists.txt  system_calls.c  system_calls.cpp
src/pito/: CMakeLists.txt  Makefile.local  application.hpp  config.hpp.cmake  configure  environment.hpp  library.hpp  pito.cpp  system_call.hpp
src/pito/interceptor/: CMakeLists.txt  Library.hpp  SystemCall.hpp  application.hpp  libc.h  library.hpp  pito.cpp  system_call.hpp  system_calls.cpp
src/pito/interceptor/helper/: libc.hpp
src/pito/interceptor/jail/: environment.hpp  libc.hpp
src/pito/interceptor/lib/: c.hpp  c_traits.hpp  traits.hpp
src/pito/interceptor/log/: CMakeLists.txt  helper.hpp  libc.cpp
src/pito/interceptor/sandbox/: CMakeLists.txt  helper.hpp  libc.cpp
src/pito/jail/: c.hpp  environment.hpp
src/pito/lib/: c.hpp  c_traits.hpp  traits.hpp
src/pito/plugin/: CMakeLists.txt  context.hpp  init.hpp
src/pito/plugin/log/: CMakeLists.txt  helper.hpp  libc.cpp
src/pito/plugin/sandbox/: CMakeLists.txt  helper.cpp  helper.hpp  libc.cpp  system_call.hpp
src/pito/src/: configure
src/pito/src/interceptor/: system_calls.cpp
src/pito/test/: CMakeLists.txt  break_fs_jail.c  break_jail.c  break_sandbox.c  execs.c
src/test/: getuid.c
